--- a/assets/css/style-lp-1.less
+++ b/assets/css/style-lp-1.less
@@ -217,6 +217,10 @@
 
 	#video-teaser {
 
+		@media all and (max-width: 767px) {
+			padding-top: 50px;
+		}
+
 		.video-container { 
 			position: relative; 
 			padding-bottom: 56.25%;
@@ -535,136 +539,136 @@
 // NEWSLETTER 
 ////////////////////////////////////////////////////////////////////////////////////
 
-#newsletter {
-	position: relative;
-	
-	p {
-		margin-bottom: 0;
+	#newsletter {
+		position: relative;
 		
-		&.sub {
-			margin-bottom: 20px;
-		}
-	}
-	
-	h2 {
-		margin-bottom: 20px;
-		
-//		@media all and (max-width: @breakpoint3) {
-//			margin-bottom: 30px;
-//		}
-		
-		b {
-			color: @blue;
-		}
-	}
-
-	.wpcf7-form-control-wrap.your-email {
-		flex: 0 0 100%;
-		max-width: 100%;
-	}
-
-	input[type="email"] {
-		border: 1px solid #dedede;
-		padding: 10px 10px;
-		max-width: 100%;
-		border-radius: 0;
-		background: #FFF;
-		box-shadow: none !important;
-		-webkit-appearance: none;
-		box-sizing: border-box;
-		width: 100%;
-		margin: 0;
-		outline: 0;
-		line-height: 1;
-		height: auto;
-	}
-
-	input[type="submit"] {
-		.btn;
-		.btn.btn-orange;
-//		width: 100%;
-		font-size: 1.2em;
-		font-weight: 700;
-		margin: 0 auto;
-		display: block;
-	}
-
-	.wpcf7-not-valid-tip {
-		margin-top: 5px;
-		font-size: .8rem;
-	}
-
-	div.wpcf7-validation-errors {
-		margin: 0;
-		background: #ed745b;
-		border: 0;
-		color: #FFF;
-		padding: .9em 1em;
-	}
-
-	.wpcf7-form.sent {
-
 		p {
-			display: none;
+			margin-bottom: 0;
+			
+			&.sub {
+				margin-bottom: 20px;
+			}
+		}
+		
+		h2 {
+			margin-bottom: 20px;
+			
+	//		@media all and (max-width: @breakpoint3) {
+	//			margin-bottom: 30px;
+	//		}
+			
+			b {
+				color: @blue;
+			}
 		}
 
-		.wpcf7-mail-sent-ok {
-			background: #689340;
+		.wpcf7-form-control-wrap.your-email {
+			flex: 0 0 100%;
+			max-width: 100%;
+		}
+
+		input[type="email"] {
+			border: 1px solid #dedede;
+			padding: 10px 10px;
+			max-width: 100%;
+			border-radius: 0;
+			background: #FFF;
+			box-shadow: none !important;
+			-webkit-appearance: none;
+			box-sizing: border-box;
+			width: 100%;
+			margin: 0;
+			outline: 0;
+			line-height: 1;
+			height: auto;
+		}
+
+		input[type="submit"] {
+			.btn;
+			.btn.btn-orange;
+	//		width: 100%;
+			font-size: 1.2em;
+			font-weight: 700;
+			margin: 0 auto;
+			display: block;
+		}
+
+		.wpcf7-not-valid-tip {
+			margin-top: 5px;
+			font-size: .8rem;
+		}
+
+		div.wpcf7-validation-errors {
+			margin: 0;
+			background: #ed745b;
+			border: 0;
 			color: #FFF;
 			padding: .9em 1em;
 		}
-	}
 
-	.privacy-policy-wrapper {
-		position: relative;
-		font-size: .85em;
-		margin: 25px 0;
+		.wpcf7-form.sent {
 
-		@media all and (min-width: @breakpoint3_mf) {
-			margin: 25px 0 10px 0;
-		}
+			p {
+				display: none;
+			}
 
-		.col_1,
-		.col_11 {
-			border-left: 0;
-		}
-
-		.col_1 {
-			max-width: 35px;
-
-			span.wpcf7-list-item {
-				margin-left: 0;
-
+			.wpcf7-mail-sent-ok {
+				background: #689340;
+				color: #FFF;
+				padding: .9em 1em;
 			}
 		}
 
-		@media all and (max-width: 768px) {
+		.privacy-policy-wrapper {
+			position: relative;
+			font-size: .85em;
+			margin: 25px 0;
+
+			@media all and (min-width: @breakpoint3_mf) {
+				margin: 25px 0 10px 0;
+			}
+
+			.col_1,
+			.col_11 {
+				border-left: 0;
+			}
 
 			.col_1 {
 				max-width: 35px;
+
+				span.wpcf7-list-item {
+					margin-left: 0;
+
+				}
 			}
 
-			.col_11 {
-				max-width: 80%;
+			@media all and (max-width: 768px) {
+
+				.col_1 {
+					max-width: 35px;
+				}
+
+				.col_11 {
+					max-width: 80%;
+				}
 			}
-		}
 
-		a {
-			color: @blue;
-		}
+			a {
+				color: @blue;
+			}
 
-		.wpcf7-form-control-wrap.privacy-policy {
-			position: initial;
+			.wpcf7-form-control-wrap.privacy-policy {
+				position: initial;
 
-			.wpcf7-not-valid-tip {
-				position: absolute;
-				bottom: -28px;
-				font-size: .8rem;
-				width: 200px;
+				.wpcf7-not-valid-tip {
+					position: absolute;
+					bottom: -28px;
+					font-size: .8rem;
+					width: 200px;
+				}
 			}
 		}
 	}
-}
 
 ////////////////////////////////////////////////////////////////////////////////////
 // INSTAGRAM SECTION
@@ -672,12 +676,14 @@
 
 	#instagram {
 		position: relative;
+		z-index: 0;
 		background-image: url(../img/bali-background-4.jpg);
 		background-size: cover;
 
 		&:before {
 			content: "";
 			position: absolute;
+			z-index: -1;
 			top: 0;
 			left: 0;
 			width: 100%;
