--- a/assets/css/style-locations.less
+++ b/assets/css/style-locations.less
@@ -160,7 +160,27 @@
 // GOOGLE MAPS SECTION
 ////////////////////////////////////////////////////////////////////////////////////
 
-	section#google-maps-contact {
+	section#maps {
+
+		.google-maps,
+		.contact {
+			position: relative;
+			z-index: 1;
+		}
+
+		.google-maps {
+			height: 500px;
+			margin-bottom: 80px;
+			box-shadow: 0 0 25px rgba(0, 0, 0, .1);
+		}
+
+	}
+
+////////////////////////////////////////////////////////////////////////////////////
+// CONTACT SECTION
+////////////////////////////////////////////////////////////////////////////////////
+
+	section#contact {
 		background-image: url(../img/bali-background-4.jpg);
 		background-size: cover;
 		position: relative;
@@ -182,7 +202,7 @@
 			left: 0;
 			bottom: 0;
 			width: 100%;
-			height: 400px;
+			height: 100%;
 			background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #ffffff);
 		}
 
