--- a/assets/css/style-locations.less
+++ b/assets/css/style-locations.less
@@ -181,30 +181,30 @@
 ////////////////////////////////////////////////////////////////////////////////////
 
 	section#contact {
-		background-image: url(../img/bali-background-4.jpg);
-		background-size: cover;
-		position: relative;
+		// background-image: url(../img/bali-background-4.jpg);
+		// background-size: cover;
+		// position: relative;
 
-		&:before {
-			content: '';
-			position: absolute;
-			z-index: 0;
-			height: 250px;
-			width: 100%;
-			top: 0;
-			left: 0;
-			background: #FFF;
-		}
+		// &:before {
+		// 	content: '';
+		// 	position: absolute;
+		// 	z-index: 0;
+		// 	height: 250px;
+		// 	width: 100%;
+		// 	top: 0;
+		// 	left: 0;
+		// 	background: #FFF;
+		// }
 
-		&:after {
-			content: "";
-			position: absolute;
-			left: 0;
-			bottom: 0;
-			width: 100%;
-			height: 100%;
-			background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #ffffff);
-		}
+		// &:after {
+		// 	content: "";
+		// 	position: absolute;
+		// 	left: 0;
+		// 	bottom: 0;
+		// 	width: 100%;
+		// 	height: 100%;
+		// 	background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #ffffff);
+		// }
 
 		.google-maps,
 		.contact {
